# ocamlpractice

./: .travis.yml  README.md  dune  main.ml  main.mli
.github/workflows/: unittest.yml
test/: dune  ex2_6_1.ml  ex2_6_2.ml  ex2_6_3.ml  ex2_6_4.ml  ex3_11_1.ml  ex3_11_2.ml  ex3_11_3.ml  ex3_11_4.ml  ex3_12.ml  ex3_3.ml  ex3_7_1.ml  ex3_7_2.ml  ex3_8.ml  ex4_1.ml  ex4_2.ml  ex4_4.ml  ex4_5.ml  ex4_7.ml  ex5_2.ml  ex5_3_1.ml  ex5_3_2.ml  ex5_3_3.ml  ex5_3_4.ml  ex5_3_5.ml  ex5_3_6.ml  ex5_5.ml  ex5_6.ml  ex5_7.ml  ex5_8.ml  ex6_1.ml  ex6_2.ml  ex6_3.ml  ex6_4.ml  ex6_5.ml  ex6_6.ml  ex6_7.ml  ex6_9.ml  ex7_1.ml  ex7_2.ml  (+6 more)
