(tests
  (names
    ex2_1
    ;ex2_2
    ;ex2_3
    ;ex2_4
    ;ex2_5
    ;ex2_6_1
    ;ex2_6_2
    ;ex2_6_3
    ;ex2_6_4

    ;ex3_1
    ;ex3_2
    ;ex3_3
    ;ex3_4
    ;ex3_5
    ;ex3_6
    ;ex3_7_1
    ;ex3_7_2
    ;ex3_8
    ;ex3_9
    ;ex3_10
    ;ex3_11_1
    ;ex3_11_2
    ;ex3_11_3
    ;ex3_11_4
    ;ex3_12

    ;ex4_1
    ;ex4_2
    ;ex4_3
    ;ex4_4
    ;ex4_5
    ;ex4_6
    ;ex4_7
    ;ex4_8

    ;ex5_1
    ;ex5_2
    ;ex5_3_1
    ;ex5_3_2
    ;ex5_3_3
    ;ex5_3_4
    ;ex5_3_5
    ;ex5_3_6
    ;ex5_4
    ;ex5_5
    ;ex5_6
    ;ex5_7
    ;ex5_8

    ;ex6_1
    ;ex6_2
    ;ex6_3
    ;ex6_4
    ;ex6_5
    ;ex6_6
    ;ex6_7
    ;ex6_8
    ;ex6_9

    ;ex7_1
    ;ex7_2
    ;ex7_3
    ;ex7_4
    ;ex7_5
    ;ex7_6
    ;ex7_7
    ;ex7_8
  )
  (libraries
    oUnit
    exercise
  ))
